// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RefreshButtonComponent should render button at 50% 1`] = `
<termo-refresh-button
  progress={[Function Number]}
  refresh={[Function EventEmitter_]}
>
  <button
    class="refresh"
  >
    <div
      class="refresh__progress"
      style="width: 50%;"
    />
    <span
      class="refresh__label"
    />
  </button>
</termo-refresh-button>
`;

exports[`RefreshButtonComponent should render button at initial state 1`] = `
<termo-refresh-button
  refresh={[Function EventEmitter_]}
>
  <button
    class="refresh"
  >
    <div
      class="refresh__progress"
    />
    <span
      class="refresh__label"
    />
  </button>
</termo-refresh-button>
`;

exports[`RefreshButtonComponent should render button at refreshing state 1`] = `
<termo-refresh-button
  progress={[Function Number]}
  refresh={[Function EventEmitter_]}
  refreshing={[Function Boolean]}
>
  <button
    class="refresh"
  >
    <div
      class="refresh__progress refresh__progress--refreshing"
      style="width: 100%;"
    />
    <span
      class="refresh__label"
    />
  </button>
</termo-refresh-button>
`;
